fix widget gap

--- a/source/css/_components/widgets/widgets.styl
+++ b/source/css/_components/widgets/widgets.styl
@@ -10,9 +10,8 @@
   scrollbar(0, 0)
   z-index: 1
   line-height: 1.2
-  margin: 0 var(--gap-margin)
-  @media screen and (max-width: $device-laptop)
-    margin: 32px var(--gap-margin) 
+  margin: 0 var(--gap-margin) 
+    // margin: 32px var(--gap-margin) 
   .widget-wrapper
     .widget-header
       padding-left: var(--gap-padding)
@@ -75,11 +74,14 @@
     .widget-header
       padding-left: var(--gap-padding)
       padding-right: var(--gap-padding)
+
   // 小屏幕
   @media screen and (max-width: $device-laptop)
     .widget-wrapper
       // margin-top: var(--gap-margin)
       border-radius: $border-card
+      &:first-child
+        margin-top: 32px
   // 大屏幕
   @media screen and (min-width: $device-laptop)
     .widget-wrapper.markdown .widget-body
